modifying htaccess file

--- a/.htaccess
+++ b/.htaccess
@@ -95,12 +95,12 @@ DirectoryIndex index.php index.html index.htm
   # (http://example.com/... will be redirected to http://www.example.com/...)
   # uncomment the following:
 
-    RewriteCond %{HTTP_HOST} .
-    RewriteCond %{HTTP_HOST} !^www\. [NC]
-    RewriteCond %{HTTP_HOST} !^www-staging\. [NC]
-    RewriteCond %{HTTP_HOST} !^127\.0\.0\.1 [NC]
-    RewriteCond %{HTTP_HOST} !^localhost [NC]
-    RewriteRule ^ http://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    # RewriteCond %{HTTP_HOST} .
+    # RewriteCond %{HTTP_HOST} !^www\. [NC]
+    # RewriteCond %{HTTP_HOST} !^www-staging\. [NC]
+    # RewriteCond %{HTTP_HOST} !^127\.0\.0\.1 [NC]
+    # RewriteCond %{HTTP_HOST} !^localhost [NC]
+    # RewriteRule ^ http://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
   #
   # To redirect all users to access the site WITHOUT the 'www.' prefix,
